--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:  ORMGP Boston-Mills
+title:  ORMGP IWA EE-11-1
 description: BEDROCK VALLEY HYDROGEOLOGIC SETTING (Caledon East bedrock valley)
 markdown: kramdown
 kramdown:
